# Photon

./: .gitignore  .gitmodules  AGENT_AST_COMPLETE.md  CMakeLists.txt  CONSTITUTION_EVOLUTION.md  FEATURES.md  GIT_PATCH_INTEGRATION.md  INTEGRATION_COMPLETE.md  README.en.md  README.jp.md  README.md  README.zh.md  README_REFACTOR.md  REFACTOR_STATUS.md  SEMANTIC_SEARCH_COMPLETE.md  TOOLS_SUMMARY.md  TUTORIALS_UPDATE_COMPLETE.md  WINDOWS_GIT_FIX.md  build.bat  build.sh  config.example.json  config.json  design.md  photon_agent_constitution_v_2.md  plan.md  run_system_tests.sh  test_patch.txt  文档整理完成.md
.github/workflows/: c-cpp.yml
builtin_skills/code-architect/: SKILL.md
builtin_skills/create-skill/: SKILL.md
builtin_skills/create-subagent/: SKILL.md
builtin_skills/debug-master/: SKILL.md
builtin_skills/env-initializer/: SKILL.md
builtin_skills/skill-creator/: SKILL.md
builtin_skills/update-cursor-settings/: SKILL.md
docs/: ALL_PROMPTS.md  README.md
docs/tutorials/: 00-开始阅读.md  AGENT_AST_ANALYSIS.md  AGENT_AST_COMPLETE.md  ARBITRARY_PATH_ANALYSIS.md  CLEANUP_COMPLETE.md  CONFIGURABLE_IGNORE_PATTERNS.md  DEBUG_OPTIONS.md  FIXES_SUMMARY.md  GLOBAL_PHOTON_SUPPORT.md  LSP_OPTIMIZATION.md  PATH_NORMALIZATION_FIX.md  PATH_SEPARATOR_FIX.md  PERFORMANCE_DEBUG_GUIDE.md  QUICK_START_AST.md  QUICK_START_SEMANTIC_SEARCH.md  README.jp.md  README.md  README.zh.md  READ_CODE_BLOCK_FIX.md  REFACTOR_COMPLETE.md  REFACTOR_SUMMARY.md  SEMANTIC_SEARCH_INTEGRATION.md  SEMANTIC_SEARCH_TOOL_COMPLETE.md  SKILL_ACTIVATION_DESIGN.md  SKILL_ACTIVATION_EXAMPLE.md  SKILL_ACTIVATION_INDEX.md  SKILL_ACTIVATION_QUICK_REF.md  SKILL_ACTIVATION_README.md  SKILL_ACTIVATION_SUMMARY.md  SKILL_ACTIVATION_TODO.md  STARTUP_OPTIMIZATION_COMPLETE.md  SYMBOL_SCAN_FIX_COMPLETE.md  SYMBOL_STRATEGY_DESIGN.md  TOOL_INTELLIGENCE_COMPLETE.md  TREESITTER_FIX_COMPLETE.md  TUTORIALS_UPDATE_COMPLETE.md  UTF8_FIX_COMPLETE.md  VIEW_SYMBOL_DEPRECATION.md  WINDOWS_MSVC_FIX.md  move_docs_here.sh  (+3 more)
examples/: semantic_search_example.cpp
src/: ConfigManager.h  ContextManager.cpp  ContextManager.h  FileManager.cpp  InternalMCPClient.cpp  InternalMCPClient.h  LLMClient.cpp  LLMClient.h  MCPClient.cpp  MCPClient.h  MCPManager.h  main.cpp
src/agent/: AgentRuntime.cpp  AgentRuntime.h  AgentState.h  ConstitutionValidator.h  EnvironmentDetector.cpp  EnvironmentDetector.h
src/analysis/: LSPClient.cpp  LSPClient.h  LogicMapper.cpp  LogicMapper.h  SemanticManager.cpp  SymbolManager.cpp  SymbolManager.h
src/analysis/providers/: RegexSymbolProvider.cpp  RegexSymbolProvider.h  TreeSitterSymbolProvider.cpp  TreeSitterSymbolProvider.h
src/core/: ConfigManager.h  ContextManager.cpp  ContextManager.h  LLMClient.cpp  LLMClient.h  UIManager.cpp  UIManager.h  main.cpp
src/mcp/: InternalMCPClient.cpp  InternalMCPClient.h  LSPClient.cpp  LSPClient.h  MCPClient.cpp  MCPClient.h  MCPManager.h
src/memory/: FailureMemory.cpp  FailureMemory.h  MemoryManager.cpp  MemoryManager.h  ProjectMemory.cpp  ProjectMemory.h
src/tools/: CoreTools.cpp  CoreTools.h  ITool.h  SemanticSearchTool.cpp  SemanticSearchTool.h  ToolRegistry.cpp  ToolRegistry.h  ViewSymbolTool.cpp  ViewSymbolTool.h
src/utils/: BuiltinSkillsData.h  FileManager.cpp  FileManager.h  Logger.cpp  Logger.h  LogicMapper.cpp  LogicMapper.h  RegexSymbolProvider.cpp  RegexSymbolProvider.h  ScanIgnore.cpp  ScanIgnore.h  SemanticManager.cpp  SemanticManager.h  SkillManager.h  SymbolManager.cpp  SymbolManager.h  TreeSitterSymbolProvider.cpp  TreeSitterSymbolProvider.h
tests/: complete_arkts_test.sh  coverage.sh  final_arkts_test.sh  manual_arkts_test.sh  multilingual_test.c  multilingual_test.cpp  multilingual_test.js  multilingual_test.py  multilingual_test.ts  run_arkts_test.sh  simple_test.ets  test_ApplyPatchDiff.cpp  test_AttemptTool.cpp  test_ContextManager.cpp  test_FileManager.cpp  test_GrepTool.cpp  test_InternalMCPClient.cpp  test_ListProjectFilesTool.cpp  test_SystemRequirementFlow.cpp  test_WriteTool.cpp  test_all_arkts_decorators.ets  test_arkts.ets  test_arkts_decorators.cpp  test_arkts_integration.cpp  test_arkts_treesitter  test_arkts_treesitter.cpp  test_comprehensive_decorators.sh  test_config.json  test_decorators_simple.sh  test_multilingual_support.sh  test_symbol_extraction.cpp
